Fix on deleteById swagger example and update on categories routes and controller
